<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WifiLight</string>

    <string name="activity_name_preference">Preferences</string>

    <string name="label_light_name">Name:</string>
    <string name="label_light_id">Id:</string>
    <string name="label_light_hue">Hue:</string>
    <string name="label_light_saturation">Sat:</string>
    <string name="label_light_brightness">Bright:</string>
    <string name="label_light_kelvin">Kelvin:</string>
    <string name="label_light_power">Power</string>
    <string name="label_light_details">Light Details</string>
    <string name="label_light_connected">CONNECTED</string>
    <string name="label_light_disconnected">DISCONNECTED</string>

    <string name="fragment_name_light_colour">Colour</string>
    <string name="fragment_name_light_effects">Effects</string>
    <string name="fragment_name_light_details">Details</string>
    <string name="fragment_name_light_status">Light Status</string>
    <string name="fragment_name_group_status">Group Status</string>
    <string name="fragment_name_location_status">Location Status</string>
    <string name="fragment_name_light_white">White</string>
    <string name="fragment_name_drawer">Drawer</string>

    <string name="test_string">I am a very long test string</string>

    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">WifiLight is a replacement app for LIFX\'s
        excellent Android application for controlling LIFX WiFi enabled lights.
        It currently contains no improvements over the official app :-D</string>

    <string name="action_drawer_open">Open</string>
    <string name="action_drawer_close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Reload</string>

    <string name="description_light_status">Light Status</string>
    <string name="description_error_image">Error</string>

    <string name="preference_key_api_key">preference_api_key</string>
    <string name="preference_key_server">preference_server</string>
    <string name="preference_key_url1">preference_url1</string>
    <string name="preference_key_url2">preference_url2</string>

    <string name="preferences_header_title_server">Server Preferences</string>
    <string name="preferences_header_summary_server">Set the server that controls the lights.</string>
    <string name="preference_title_api_key">API key</string>
    <string name="preference_summary_api_key">Set the API key for the light network you want to control.</string>
    <string name="preference_title_server">Server Name</string>
    <string name="preference_summary_server">The LIFX light server to connect to.</string>

    <string name="default_server">https://api.lifx.co</string>
    <string name="default_url1">v1beta1</string>
    <string name="default_url2">lights</string>

    <string name="preferences_header_title_app">App Preferences</string>
    <string name="preference_title_show_details">Show Light Details</string>
    <string name="preference_key_show_details">preference_show_details</string>
    <string name="preference_summary_show_details">Show details of the lights.</string>

    <string name="error_api_error">A bug needs fixing.</string>
    <string name="error_server_error">A server error has occurred.  Pleas try again later.</string>
    <string name="error_network_error">A network error has occurred.  Please check your network connection and try again.</string>
    <string name="error_general_error">An error has occurred.</string>
    <string name="fragment_name_location">Location</string>
    <string name="label_drawer_locations">Locations</string>
    <string name="fragment_name_group">Group</string>

</resources>
