<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="@integer/light_sliders_column_count"
        android:rowCount="@integer/light_sliders_row_count"
        android:id="@+id/sliders_layout"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_light_hue"
            android:id="@+id/hue_label"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:gravity="center_horizontal" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hue_seekbar"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:max="360" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_light_saturation"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:id="@+id/saturation_label"
            android:gravity="center_horizontal" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saturation_seekbar"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:gravity="center_horizontal"
            android:max="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_light_brightness"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:gravity="center_horizontal"
            android:id="@+id/brightness_label" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:gravity="center_horizontal"
            android:id="@+id/value_seekbar" />
    </GridLayout>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_light_power"
        android:id="@+id/power_toggle"
        android:layout_margin="10dp"
        android:layout_below="@+id/sliders_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_light_details"
        android:id="@+id/light_details_label"
        android:layout_below="@+id/power_toggle"
        android:textColor="@color/light_grey"
        android:background="@color/dark_grey"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:padding="10dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/light_details_layout"
        android:columnCount="@integer/light_details_column_count"
        android:rowCount="@integer/light_details_row_count"
        android:layout_below="@+id/light_details_label"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/dark_grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_light_name"
            android:id="@+id/name_label"
            android:textColor="@color/light_grey"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:padding="5dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/name_textview"
            android:textColor="@color/light_grey"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:padding="5dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_light_id"
            android:id="@+id/id_label"
            android:textColor="@color/light_grey"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:padding="5dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/id_textview"
            android:textColor="@color/light_grey"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:padding="5dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_light_hue"
            android:textColor="@color/light_grey"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:padding="5dp"  />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/hue_textview"
            android:textColor="@color/light_grey"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:padding="5dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_light_saturation"
            android:textColor="@color/light_grey"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:padding="5dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/saturation_textview"
            android:textColor="@color/light_grey"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_light_brightness"
            android:textColor="@color/light_grey"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/brightness_textview"
            android:textColor="@color/light_grey"
            android:layout_row="2"
            android:layout_rowSpan="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_light_kelvin"
            android:textColor="@color/light_grey"
            android:id="@+id/kelvin_label"
            android:layout_row="3"
            android:layout_rowSpan="1"
            android:layout_column="2"
            android:layout_columnSpan="3"
            android:padding="5dp"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/kelvin_textview"
            android:textColor="@color/light_grey"
            android:layout_row="5"
            android:layout_rowSpan="1"
            android:layout_column="3"
            android:layout_columnSpan="1"
            android:padding="5dp"  />
    </GridLayout>
</RelativeLayout>
